# AM_SDK_PicoWiFi

./: README.md
examples/: basic_example.cpp
examples/basic example/: DHT.h  DHT22.c  DHT22.h  basic_example.cpp
examples/skeleton/: skeleton.cpp
include/: AM_SDK_PicoWiFi.h
src/: AM_Alarms.cpp  AM_Alarms.h  AM_Ntp.cpp  AM_Ntp.h  AM_SDK_PicoWiFi.cpp  AM_SDManager.cpp  AM_SDManager.h  CMakeLists.txt  hw_config.cpp
